--- a/dedicaMNS/res/layout/login.xml
+++ b/dedicaMNS/res/layout/login.xml
@@ -8,12 +8,12 @@
         android:id="@+id/logoMN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_launcher" 
-        android:contentDescription="@string/mnLogoS"/>
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:contentDescription="@string/mnLogoS"
+        android:src="@drawable/ic_launcher" />
 
     <EditText
         android:id="@+id/userMNText"
@@ -34,12 +34,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="12dp"        
+        android:layout_marginTop="12dp"
         android:hint="@string/passMNTextS"
         android:inputType="textPassword" >
     </EditText>
 
     <LinearLayout
+        android:id="@+id/linearLayoutConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/passMNText"
