--- a/dedicaMNS/res/layout/month_view_row.xml
+++ b/dedicaMNS/res/layout/month_view_row.xml
@@ -5,10 +5,12 @@
 
     <TextView
         android:id="@+id/dayNum"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/back"
+        android:gravity="right"
         android:padding="5sp"
-        android:text="09"
+        android:text="30"
         android:textSize="20dp" >
     </TextView>
 
@@ -17,29 +19,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/dayNum"
-        android:padding="5sp"
-        android:text="Martes"
-        android:textSize="20dp" >
-    </TextView>
-
-    <TextView
-        android:id="@+id/hours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/dayName"
-        android:padding="5sp"
-        android:text="8:30"
-        android:textSize="20dp" >
+        android:gravity="bottom"
+        android:paddingTop="9sp"
+        android:paddingLeft="6sp"
+        android:text="Miercoles"
+        android:textSize="16dp" >
     </TextView>
 
     <TextView
         android:id="@+id/projectId"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/hours"
-        android:padding="5sp"
+        android:layout_toLeftOf="@+id/hours"
+        android:gravity="center_vertical|right"
+        android:paddingTop="9sp"        
         android:text="BBVA68"
-        android:textSize="20dp" >
+        android:textSize="18dp" >
     </TextView>
+
+    <TextView
+        android:id="@+id/hours"
+        android:layout_width="68dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:gravity="right"
+        android:padding="5sp"
+        android:text="8:30"
+        android:textSize="20dp" />
 
 </RelativeLayout>
