--- a/dedicaMNS/res/layout/detail_day.xml
+++ b/dedicaMNS/res/layout/detail_day.xml
@@ -119,6 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
+            android:onClick="doSaveDay"
             android:text="Guardar" />
 
         <Button
@@ -126,6 +127,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
+            android:onClick="doRemoveDay"
             android:text="Borrar" />
     </LinearLayout>
 
