--- a/dedicaMNS/res/layout/detail_day.xml
+++ b/dedicaMNS/res/layout/detail_day.xml
@@ -36,15 +36,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="Horas: "
-                android:textSize="16sp" >
+                android:textSize="14sp" >
             </TextView>
 
             <EditText
                 android:id="@+id/detailHoursEditText"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp" 
-                android:inputType="time">
+                android:layout_marginRight="5dp"
+                android:inputType="time" >
             </EditText>
         </TableRow>
 
@@ -56,15 +56,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="Proyecto: "
-                android:textSize="16sp" >
+                android:textSize="14sp" >
             </TextView>
 
             <Spinner
                 android:id="@+id/detailProjectSpinner"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"  />
-
+                android:layout_marginRight="5dp"
+                android:textSize="8sp" />
         </TableRow>
 
         <TableRow>
@@ -75,15 +75,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="Subproyecto: "
-                android:textSize="16sp" >
+                android:textSize="14sp" >
             </TextView>
 
-            <EditText
-                android:id="@+id/detailSubprojectEditText"
+            <Spinner
+                android:id="@+id/detailSubprojectSpinner"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp" 
-                android:inputType="text" />
+                android:layout_marginRight="5dp"
+                android:textSize="8sp" />
         </TableRow>
 
         <TableRow>
@@ -94,14 +94,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="Tarea: "
-                android:textSize="16sp" >
+                android:textSize="14sp" >
             </TextView>
 
             <EditText
                 android:id="@+id/detailTaskEditText"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp" 
+                android:layout_marginRight="5dp"
                 android:inputType="text" />
         </TableRow>
     </TableLayout>
