--- a/dedicaMNS/res/menu/main_menu.xml
+++ b/dedicaMNS/res/menu/main_menu.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/menu_about_us"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:title="@string/menu_about_us"/>
     <item
         android:id="@+id/menu_logout"
         android:orderInCategory="100"
