--- a/dedicaMNS/res/layout/month_view.xml
+++ b/dedicaMNS/res/layout/month_view.xml
@@ -12,9 +12,9 @@
             android:id="@+id/monthAndYear"
             android:layout_width="fill_parent"
             android:layout_height="45dp"
-            android:gravity="center"
             android:background="#d3d3d3"
-            android:text="Dedicaciones Octubre 2012"            
+            android:gravity="center"
+            android:text="Dedicaciones Octubre 2012"
             android:textSize="22sp" />
     </RelativeLayout>
 
@@ -23,6 +23,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/monthInfo"
-         />
+        android:drawSelectorOnTop="false"
+        android:listSelector="@android:color/darker_gray" />
 
 </RelativeLayout>
