Funcionando mockeo del login correctamente. Ahora al seleccionar en la lista mensual, se marca en otro color (selectors y demás movidas...).

--- a/dedicaMNS/res/layout/month_view.xml
+++ b/dedicaMNS/res/layout/month_view.xml
@@ -23,7 +23,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/monthInfo"
-        android:drawSelectorOnTop="false"
-        android:listSelector="@android:color/darker_gray" />
+        android:drawSelectorOnTop="false" />
 
 </RelativeLayout>
