--- a/dedicaMNS/res/layout/about.xml
+++ b/dedicaMNS/res/layout/about.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0FFFF"
-    tools:context=".AboutActivity" >
+    tools:context=".AboutActivity"
+    tools:ignore="Overdraw" >
 
     <TextView
         android:id="@+id/AboutVersionTextView"
