--- a/dedicaMNS/res/layout/login.xml
+++ b/dedicaMNS/res/layout/login.xml
@@ -17,24 +17,20 @@
 
     <EditText
         android:id="@+id/userMNText"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginTop="70dp"
         android:hint="@string/userMNTextS"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/passMNText"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userMNText"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="20dp"
         android:hint="@string/passMNTextS"
         android:inputType="textPassword" >
     </EditText>
