--- a/dedicaMNS/res/layout/month_view.xml
+++ b/dedicaMNS/res/layout/month_view.xml
@@ -5,16 +5,34 @@
 
     <RelativeLayout
         android:id="@+id/monthInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" >
 
-        <TextView
-            android:id="@+id/monthAndYearTextView"
-            android:layout_width="fill_parent"
-            android:layout_height="45dp"
-            android:background="#d3d3d3"
-            android:gravity="center"
-            android:textSize="22sp" />
+        <Spinner
+                android:id="@+id/listMonthsSpinner"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="3dp"
+                android:textSize="8sp" />
+        <Spinner
+                android:id="@+id/listYearsSpinner"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="8dp"
+                android:layout_toRightOf="@+id/listMonthsSpinner"
+                android:textSize="8sp" />
+        
+        <Button
+            android:id="@+id/updateListButton"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_toRightOf="@+id/listYearsSpinner"
+            android:onClick="doUpdateList"
+            android:textSize="14sp"
+            android:gravity="center_vertical"
+            android:text="Actualizar" />
+        
     </RelativeLayout>
 
     <ListView
