--- a/dedicaMNS/res/layout/general_detail_day.xml
+++ b/dedicaMNS/res/layout/general_detail_day.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/generalDayInfo"
-        android:gravity="center_horizontal" >
+        android:gravity="fill_horizontal" >
 
         <TextView
             android:id="@+id/actHoursHeader"
@@ -89,7 +89,7 @@
 
         <TextView
             android:id="@+id/actTaskHeader"
-            android:layout_width="160sp"
+            android:layout_width="fill_parent"
             android:layout_height="35sp"
             android:layout_toRightOf="@+id/actSubProjectIdHeader"
             android:background="@drawable/back"
@@ -113,7 +113,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gListActivities"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5sp"
         android:gravity="center_horizontal" >
 
         <Button
