Fix en el about, para que quepa la versión.

--- a/dedicaMNS/res/layout/about.xml
+++ b/dedicaMNS/res/layout/about.xml
@@ -17,11 +17,11 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="22sp"
+            android:layout_marginRight="22sp"
+            android:layout_marginTop="20sp"
             android:drawableLeft="@drawable/ic_launcher"
-            android:drawablePadding="15dp"
+            android:drawablePadding="15sp"
             android:ems="10"
             android:gravity="center_vertical"
             android:text="@string/versionLabelAbout"
@@ -33,7 +33,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_below="@+id/AboutVersionTextView"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="35sp"
             android:gravity="left"
             android:paddingLeft="9sp"
             android:paddingRight="9sp"
