--- a/dedicaMNS/res/layout/about.xml
+++ b/dedicaMNS/res/layout/about.xml
@@ -34,6 +34,7 @@
             android:layout_height="fill_parent"
             android:layout_below="@+id/AboutVersionTextView"
             android:layout_marginTop="35sp"
+            android:autoLink="web"
             android:gravity="left"
             android:paddingLeft="9sp"
             android:paddingRight="9sp"
